# paradise-cakes-api

./: .gitignore  swagger.yaml
.github/workflows/: ci-release.yml
ci/: generate-contract.sh  int_test.sh  lint.sh
integration_tests/: conftest.py  request_helper.py
integration_tests/lib/: auth_utils.py  dessert.py  order.py
integration_tests/routes/: test_delete_dessert.py  test_get_dessert.py  test_get_order.py  test_get_orders.py  test_patch_dessert.py  test_patch_order.py  test_post_confirm_signup.py  test_post_dessert.py  test_post_order.py  test_post_signup.py
integration_tests/routes/auth/: test_post_confirm_forgot_password.py  test_post_confirm_signup.py  test_post_forgot_password.py  test_post_resend_confirmation_code.py  test_post_signup.py
integration_tests/routes/desserts/: test_get_dessert.py  test_patch_dessert.py  test_post_dessert.py
integration_tests/routes/orders/: test_get_order.py  test_get_orders.py  test_patch_order.py  test_post_order.py
lambdas/: Dockerfile  generate_swagger.py  pyproject.toml
lambdas/src/: __init__.py  api.py
lambdas/src/api_authorizer/: handler.py
lambdas/src/customize_emails_trigger/: handler.py
lambdas/src/email_formatter/: handler.py  lol.json
lambdas/src/lib/: authorization.py  dynamodb.py  response.py
lambdas/src/models/: __init__.py  base.py  dessert.py  desserts.py  image.py  order.py  orders.py
lambdas/src/routes/: delete_dessert.py  get_dessert.py  get_dessert_images.py  get_desserts.py  get_display_images.py  get_order.py  get_orders.py  hello.py  patch_dessert.py  patch_order.py  post_confirm_forgot_password.py  post_confirm_signup.py  post_dessert.py  post_dessert_image.py  post_forgot_password.py  post_logout.py  post_order.py  post_resend_confirmation_code.py  post_signin.py  post_signup.py
lambdas/tests/: conftest.py  test_api_authorizer.py  test_authorization.py  test_base.py  test_customize_emails_trigger.py  test_delete_dessert.py  test_email_formatter.py  test_get_dessert.py  test_get_dessert_images.py  test_get_desserts.py  test_get_display_images.py  test_get_order.py  test_get_orders.py  test_patch_dessert.py  test_patch_order.py  test_post_confirm_forgot_password.py  test_post_confirm_signup.py  test_post_dessert.py  test_post_dessert_image.py  test_post_forgot_password.py  test_post_logout.py  test_post_order.py  test_post_resend_confirmation_code.py  test_post_signin.py  test_post_signup.py
terraform/: acm.tf  alb.tf  apigateway.tf  cloudwatch.tf  cognito.tf  dynamo.tf  ecr.tf  elb.tf  iam.tf  lambda.tf  main.tf  route53.tf  s3.tf  variables.tf  vpc.tf
