[tool.poetry]
name = "lambdas"
version = "0.1.0"
description = ""
authors = ["Anthony Viera <anthonyviera4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.0"
mangum = "^0.17.0"
boto3 = "^1.34.55"
aws-lambda-powertools = "2.22.0"
uuid = "^1.30"
black = "^24.2.0"
arrow = "^1.3.0"
pydantic = "^2.6.4"
pytest = "^7.1.2"
requests-mock = "^1.11.0"
unittest = "^0.0"
freezegun = "^1.4.0"
mock = "^5.1.0"
httpx = "^0.26.0"
simplejson = "^3.19.2"
pytest-cov = "^4.1.0"
pytest-helpers-namespace = "^2021.12.29"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = false
source = ["src"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
